exports[`createValintaperuste > should be able to create valintaperuste #0`] =
{
  "hakutapaKoodiUri": "hakutapa_01#1",
  "kielivalinta": [
    "fi"
  ],
  "kohdejoukkoKoodiUri": "haunkohdejoukko_12#1",
  "koulutustyyppi": "yo",
  "metadata": {
    "hakukelpoisuus": {
      "fi": "<p>hakukelpoisuus</p>"
    },
    "kuvaus": {
      "fi": "<p>Kuvaus</p>"
    },
    "lisatiedot": {
      "fi": "<p>lisatiedot</p>"
    },
    "sisalto": [
      {
        "data": {
          "fi": "<p>Sisältötekstiä</p>"
        },
        "tyyppi": "teksti"
      },
      {
        "data": {
          "rows": [
            {
              "columns": [
                {
                  "index": 0,
                  "text": {
                    "fi": "solu1.1"
                  }
                },
                {
                  "index": 1,
                  "text": {
                    "fi": "solu1.2"
                  }
                }
              ],
              "index": 0
            },
            {
              "columns": [
                {
                  "index": 0,
                  "text": {
                    "fi": "solu2.1"
                  }
                },
                {
                  "index": 1,
                  "text": {
                    "fi": "solu2.2"
                  }
                }
              ],
              "index": 1
            }
          ]
        },
        "tyyppi": "taulukko"
      }
    ],
    "tyyppi": "yo",
    "valintakokeidenYleiskuvaus": {
      "fi": "<p>Valintakokeiden kuvaus</p>"
    },
    "valintatavat": [
      {
        "enimmaispisteet": 100.02,
        "kaytaMuuntotaulukkoa": false,
        "kuvaus": {},
        "kynnysehto": {
          "fi": "<p>Kynnysehto</p>"
        },
        "nimi": {
          "fi": "Valintatavan nimi"
        },
        "sisalto": [
          {
            "data": {
              "fi": "<p>Sisältötekstiä</p>"
            },
            "tyyppi": "teksti"
          },
          {
            "data": {
              "rows": [
                {
                  "columns": [
                    {
                      "index": 0,
                      "text": {
                        "fi": "solu1.1"
                      }
                    },
                    {
                      "index": 1,
                      "text": {
                        "fi": "solu1.2"
                      }
                    }
                  ],
                  "index": 0
                },
                {
                  "columns": [
                    {
                      "index": 0,
                      "text": {
                        "fi": "solu2.1"
                      }
                    },
                    {
                      "index": 1,
                      "text": {
                        "fi": "solu2.2"
                      }
                    }
                  ],
                  "index": 1
                }
              ]
            },
            "tyyppi": "taulukko"
          }
        ],
        "vahimmaispisteet": 10.01,
        "valintatapaKoodiUri": "valintatapajono_tv#1"
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Valintaperusteen nimi"
  },
  "onkoJulkinen": true,
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": "1",
  "tila": "julkaistu",
  "esikatselu": false,
  "valintakokeet": [
    {
      "metadata": {
        "erityisjarjestelytMahdollisia": true,
        "liittyyEnnakkovalmistautumista": true,
        "ohjeetEnnakkovalmistautumiseen": {
          "fi": "<p>ohjeet ennakkovalmistautumiseen</p>"
        },
        "ohjeetErityisjarjestelyihin": {
          "fi": "<p>ohjeet erityisjärjestelyihin</p>"
        },
        "tietoja": {
          "fi": "<p>Tietoa hakijalle</p>"
        },
        "vahimmaispisteet": 10.03,
      },
      "nimi": {
        "fi": "nimi"
      },
      "tilaisuudet": [
        {
          "aika": {
            "alkaa": "2019-04-02T10:45",
            "paattyy": "2019-04-02T19:00"
          },
          "jarjestamispaikka": {
            "fi": "paikka"
          },
          "lisatietoja": {
            "fi": "<p>lisatietoja</p>"
          },
          "osoite": {
            "osoite": {
              "fi": "osoite"
            },
            "postinumeroKoodiUri": "posti_00350#2"
          }
        }
      ],
      "tyyppiKoodiUri": "valintakokeentyyppi_8#1"
    }
  ]
};

exports[`editValintaperuste > should be able to edit valintaperuste #0`] =
{
  "hakutapaKoodiUri": "hakutapa_01#1",
  "id": "649adb37-cd4d-4846-91a9-84b58b90f928",
  "julkinen": false,
  "kielivalinta": [
    "fi"
  ],
  "kohdejoukkoKoodiUri": "haunkohdejoukko_12#1",
  "koulutustyyppi": "amk",
  "metadata": {
    "hakukelpoisuus": {},
    "kuvaus": {
      "fi": "<p>Loppukuvaus</p>"
    },
    "lisatiedot": {},
    "sisalto": [
      {
        "data": {
          "fi": "<p>Tekstia</p>"
        },
        "tyyppi": "teksti"
      },
      {
        "data": {
          "nimi": {},
          "rows": [
            {
              "columns": [
                {
                  "index": 0,
                  "text": {
                    "fi": "Solu"
                  }
                }
              ],
              "index": 0,
              "isHeader": false
            }
          ]
        },
        "tyyppi": "taulukko"
      }
    ],
    "tyyppi": "amk",
    "valintakokeidenYleiskuvaus": {
      "fi": "<p>Valintakokeiden kuvaus - fi</p>"
    },
    "valintatavat": [
      {
        "enimmaispisteet": 100.02,
        "kaytaMuuntotaulukkoa": false,
        "kuvaus": {},
        "kynnysehto": {
          "fi": "<p>Kynnysehto</p>"
        },
        "nimi": {
          "fi": "Valintatavan nimi"
        },
        "sisalto": [
          {
            "data": {
              "fi": "<p>Tekstia</p>"
            },
            "tyyppi": "teksti"
          },
          {
            "data": {
              "nimi": {},
              "rows": [
                {
                  "columns": [
                    {
                      "index": 0,
                      "text": {
                        "fi": "Solu"
                      }
                    }
                  ],
                  "index": 0,
                  "isHeader": false
                }
              ]
            },
            "tyyppi": "taulukko"
          }
        ],
        "vahimmaispisteet": 10.01,
        "valintatapaKoodiUri": "valintatapajono_tv#1"
      }
    ]
  },
  "modified": "2019-04-03T13:56",
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Valintaperusteen nimi"
  },
  "onkoJulkinen": false,
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": "1",
  "tila": "tallennettu",
  "esikatselu": false,
  "valintakokeet": [
    {
      "id": "testi-id-123",
      "metadata": {
        "erityisjarjestelytMahdollisia": true,
        "liittyyEnnakkovalmistautumista": true,
        "ohjeetEnnakkovalmistautumiseen": {
          "fi": "<p>Ohjeet ennakkovalmistautumiseen - fi</p>"
        },
        "ohjeetErityisjarjestelyihin": {
          "fi": "<p>Ohjeet erityisjärjestelyihin - fi</p>"
        },
        "tietoja": {
          "fi": "<p>Tietoa kokeesta - fi</p>"
        },
        "vahimmaispisteet": 10.03,
      },
      "nimi": {
        "fi": "Kokeen nimi - fi"
      },
      "tilaisuudet": [
        {
          "aika": {
            "alkaa": "2019-04-16T08:44",
            "paattyy": "2019-04-18T08:44"
          },
          "jarjestamispaikka": {
            "fi": "Jarjestamispaikka - fi"
          },
          "lisatietoja": {
            "fi": "<p>fi lisatietoja</p>"
          },
          "osoite": {
            "osoite": {
              "fi": "fi osoite"
            },
            "postinumeroKoodiUri": "posti_00350#2"
          }
        }
      ],
      "tyyppiKoodiUri": "tyyppi_1#1"
    }
  ]
};
